apps/payment-service/base/networkpolicies/allow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-ingress

spec:
  podSelector:
    matchLabels:
      app: order-service

  policyTypes:
    - Ingress

  ingress:
    - from:

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-system

      ports:
        - protocol: TCP
          port: 8084
