apps/payment-service/base/networkpolicies/allow-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-redis

spec:
  podSelector:
    matchLabels:
      app: order-service

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: redis

      ports:
        - protocol: TCP
          port: 6379
